--- a/server/src/main/resources/file.conf
+++ b/server/src/main/resources/file.conf
@@ -2,7 +2,7 @@
 ## transaction log store, only used in seata-server
 store {
   ## store mode: file、db、redis
-  mode = "file"
+  mode = "db"
 
   ## file store property
   file {
@@ -27,9 +27,13 @@ store {
     ## mysql/oracle/postgresql/h2/oceanbase etc.
     dbType = "mysql"
     driverClassName = "com.mysql.jdbc.Driver"
-    url = "jdbc:mysql://127.0.0.1:3306/seata"
-    user = "mysql"
-    password = "mysql"
+    #url = "jdbc:mysql://10.6.136.51:3306/seata?traceProtocol=true&logger=com.mysql.jdbc.log.SLF4JLogger&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf8"
+    #url = "jdbc:mysql://127.0.0.1:3306/seata"
+    #user = "mysql"
+    #password = "mysql"
+    user = "seatauser123"
+    password = "seatapassword"
+
     minConn = 5
     maxConn = 30
     globalTable = "global_table"
