--- a/server/src/main/resources/registry.conf
+++ b/server/src/main/resources/registry.conf
@@ -1,15 +1,17 @@
 registry {
   # file 、nacos 、eureka、redis、zk、consul、etcd3、sofa
-  type = "file"
+  #type = "file"
+  type = "nacos"
 
   nacos {
     application = "seata-server"
-    serverAddr = "127.0.0.1:8848"
+    #serverAddr = "127.0.0.1:8848"
+    serverAddr = "10.6.136.50:8848"
     group = "SEATA_GROUP"
-    namespace = ""
+    #namespace = ""
     cluster = "default"
-    username = ""
-    password = ""
+    username = "nacos"
+    password = "nacos"
   }
   eureka {
     serviceUrl = "http://localhost:8761/eureka"
@@ -55,14 +57,16 @@ registry {
 
 config {
   # file、nacos 、apollo、zk、consul、etcd3
-  type = "file"
+  #type = "file"
+  type = "nacos"
 
   nacos {
-    serverAddr = "127.0.0.1:8848"
+    #serverAddr = "127.0.0.1:8848"
+    serverAddr = "10.6.136.50:8848"
     namespace = ""
     group = "SEATA_GROUP"
-    username = ""
-    password = ""
+    username = "nacos"
+    password = "nacos"
   }
   consul {
     serverAddr = "127.0.0.1:8500"
